<resources>
    <string name="app_name">My ApplicationAndroid-Beginner</string>
    <string name="button">Кнопка</string>
    <string name="Text1">Синий</string>
    <string name="Text2">красный</string>
    <string name="textOne">цвет зеленый</string>
    <string name="textTwo">цвет синий</string>
    <string name="textExChangeActivity">TextExchangeActivity</string>
    <string name="Menu">menu</string>
    <string name="buttonMenu">menuButton</string>
    <string name="nextTask">next task</string>
    <string name="nextTask2">nextTask2</string>
    <string name="nextTask3">nextTask3</string>
    <string name="nextTask5">nextTask5</string>
    <string name="nextTask4">nextTask4</string>
    <string name="nextTask6">nextTask6</string>
    <string name="nextTask7">nextTask7</string>
    <string name="nextTask8">nextTask8</string>
    <string name="australia">linearAustralia</string>
    <string name="Australia">Australia</string>
    <string name="Australia2">Australia2</string>
    <string name="Australia3">Australia3</string>
    <string name="ScrollFlag">scrollFlag</string>
    <string name="layoutAustralia">layoutAustralia</string>
    <string name="FlagsActivity">flagsActivity</string>
    <string name="buttonFlagsActivity"> flagActivityButton</string>
    <string name="Create_account">Create account</string>
    <string name="logIn">Log in</string>
    <string name="LoginLinearActivity">LoginLinearActivity</string>
    <string name="Password">password</string>
    <string name="UserName" >username</string>
    <string name="forgot"><u>forgot your username/password?</u></string>
    <string name="buttonTextExChange">textExChangeButton</string>
    <string name="enterImageAddress">enter image address</string>
    <string name="nameButtonImage">Ok</string>
    <string name="myUrl">https://"https://i.imgur.com/DvpvklR.png"</string>
    <string name="nameActivityButtonImage">Image Activity</string>
    <string name="todo">TODO</string>
    <string name="nameAlex">Alexei Burkut</string>
    <string name="trophies">TROPHIES</string>
    <string name="numb4">4</string>
    <string name="numb54">54</string>
    <string name="numb12">12</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="myName">NAME</string>
    <string name="alex">FOLLOWERS</string>
    <string name="country">COUNTRY</string>
    <string name="belarus">BELARUS</string>
    <string name="postal">POSTAL CODE</string>
    <string name="index">000000</string>
    <string name="dataBirth">DATA OF BIRTH</string>
    <string name="may">MAY,02,1988</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="height">HEIGHT</string>
    <string name="myHeight">190</string>
    <string name="phone">PHONE</string>
    <string name="numberPhone">(029)358–89–84</string>
    <string name="profileActivityButton">profileActivityButton</string>
    <string name="profileActivity">profile Activity</string>
    <string name="profileImageView">profileImageView</string>
</resources>
