<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0A0A"
    android:orientation="vertical"
    android:paddingLeft="@dimen/generalIndent"
    android:paddingTop="@dimen/generalIndent"
    android:paddingRight="@dimen/generalIndent">

    <LinearLayout
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:foreground="@drawable/ic_notifications_none_black_24dp"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/monda_bold"
            android:gravity="center|center_vertical"
            android:text="@string/nameAlex"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_regular"
                android:gravity="center"
                android:text="@string/trophies"
                android:textColor="@color/gray"
                android:textSize="@dimen/q16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_bold"
                android:gravity="center"
                android:text="@string/numb4"
                android:textColor="@color/orange"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_regular"
                android:gravity="center"
                android:scrollbarSize="@dimen/q16sp"
                android:text="@string/following"
                android:textColor="@color/gray"
                android:textSize="@dimen/q16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_bold"
                android:gravity="center"
                android:text="@string/numb54"
                android:textColor="@color/orange"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_regular"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="@color/gray"
                android:textSize="@dimen/q16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monda_bold"
                android:gravity="center"
                android:text="@string/numb12"
                android:textColor="@color/orange"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/myName"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/nameAlex"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/country"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/belarus"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/postal"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/index"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/dataBirth"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/may"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/gender"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/height"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/myHeight"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_regular"
            android:text="@string/phone"
            android:textColor="@color/gray"
            android:textSize="@dimen/q16sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/monda_bold"
            android:text="@string/numberPhone"
            android:textColor="@color/white"
            android:textSize="@dimen/q16sp" />

    </LinearLayout>

</LinearLayout>