<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="@color/dark">

<EditText
    android:id="@+id/imageText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/generalIndent"
    android:autofillHints=""
    android:hint="@string/enterImageAddress"
    android:inputType="textUri"
    android:text="@string/myUrl" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/generalIndent"
    tools:ignore="ContentDescription" />

<Button
    android:id="@+id/imageButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/generalIndent"
    android:text="@string/nameButtonImage" />

    <ProgressBar
        android:id="@+id/imagePB"
        android:layout_width="@dimen/fiftyDp"
        android:layout_height="@dimen/fiftyDp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/generalIndent" />

</LinearLayout>